// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should display the right title if more than one files 1`] = `
<Well>
  <Media>
    <Img
      className="u-mr-1"
    >
      <HeaderIlustration
        count={2}
      />
    </Img>
    <Bd>
      <ForwardRef(Bold)
        ellipsis={true}
        tag="div"
      >
        My Title
      </ForwardRef(Bold)>
      <ForwardRef(Caption)
        ellipsis={true}
        tag="div"
      >
        Move.to
      </ForwardRef(Caption)>
    </Bd>
    <Button
      align="center"
      extension="narrow"
      onClick={[MockFunction]}
      size="normal"
      tag="button"
      theme="close"
      type="button"
    >
      <Icon
        color="var(--coolGrey)"
        height="14"
        icon="cross"
        spin={false}
        width="14"
      />
    </Button>
  </Media>
</Well>
`;

exports[`Header should display the right title if only one file 1`] = `
<Well>
  <Media>
    <Img
      className="u-mr-1"
    >
      <HeaderIlustration
        count={1}
      />
    </Img>
    <Bd>
      <ForwardRef(Bold)
        ellipsis={true}
        tag="div"
      >
        FileName.txt
      </ForwardRef(Bold)>
      <ForwardRef(Caption)
        ellipsis={true}
        tag="div"
      >
        Move.to
      </ForwardRef(Caption)>
    </Bd>
    <Button
      align="center"
      extension="narrow"
      onClick={[MockFunction]}
      size="normal"
      tag="button"
      theme="close"
      type="button"
    >
      <Icon
        color="var(--coolGrey)"
        height="14"
        icon="cross"
        spin={false}
        width="14"
      />
    </Button>
  </Media>
</Well>
`;

exports[`Header should display title if title is given and no file 1`] = `
<Well>
  <Media>
    <Img
      className="u-mr-1"
    >
      <HeaderIlustration
        count={0}
      />
    </Img>
    <Bd>
      <ForwardRef(Bold)
        ellipsis={true}
        tag="div"
      >
        My Title
      </ForwardRef(Bold)>
      <ForwardRef(Caption)
        ellipsis={true}
        tag="div"
      >
        Move.to
      </ForwardRef(Caption)>
    </Bd>
    <Button
      align="center"
      extension="narrow"
      onClick={[MockFunction]}
      size="normal"
      tag="button"
      theme="close"
      type="button"
    >
      <Icon
        color="var(--coolGrey)"
        height="14"
        icon="cross"
        spin={false}
        width="14"
      />
    </Button>
  </Media>
</Well>
`;

exports[`Header should fallback to Move title if no title is given 1`] = `
<Well>
  <Media>
    <Img
      className="u-mr-1"
    >
      <HeaderIlustration
        count={0}
      />
    </Img>
    <Bd>
      <ForwardRef(Bold)
        ellipsis={true}
        tag="div"
      >
        Move.title
      </ForwardRef(Bold)>
      <ForwardRef(Caption)
        ellipsis={true}
        tag="div"
      >
        Move.to
      </ForwardRef(Caption)>
    </Bd>
    <Button
      align="center"
      extension="narrow"
      onClick={[MockFunction]}
      size="normal"
      tag="button"
      theme="close"
      type="button"
    >
      <Icon
        color="var(--coolGrey)"
        height="14"
        icon="cross"
        spin={false}
        width="14"
      />
    </Button>
  </Media>
</Well>
`;
